5.1-specific changes for bug #26215 after merging the patch from 5.0:

- Added trigger tests back.
- Fixed test cases to match the extended output format of SHOW CREATE ...
- Replaced 'gptr' with 'uchar *'.


client/mysql.cc:
  Replaced 'gptr' with 'uchar *'.
mysql-test/r/mysql_comments.result:
  Fixed test cases to match the extended output format of SHOW CREATE ...
  Added trigger tests back.
mysql-test/t/mysql_comments.sql:
  Added trigger tests back.